--- a/package.json
+++ b/package.json
@@ -66,7 +66,9 @@
   },
   "dependencies": {
     "google-maps-infobox": "^1.1.13",
-    "invariant": "^2.1.0"
+    "invariant": "^2.1.0",
+    "react": "^0.14.0-rc1",
+    "react-dom": "^0.14.0-rc1"
   },
   "peerDependencies": {
   }
